[package]
name = "polymind"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
tokio-util = "0.7.17"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
humantime-serde = "1"
config = "0.15.19"
chrono = { version = "0.4.42", features = ["serde"] }
rss = { version = "2.0.12", default-features = false }
scraper = "0.24.0"
chrono-tz = "0.10.4"
serde_json = "1.0.145"
ahash = "0.8.12"
lru = "0.16.2"
lazy_static = "1.5.0"
regex = "1.12.2"
deunicode = "1.6.2"
rust-stemmers = "1.2.0"
aho-corasick = "1.1.4"
tantivy = "0.22"
ethers = { version = "2.0.14", features = ["abigen", "ws", "eip712", "rustls"] }
hex = "0.4.3"
dotenv = "0.15.0"
fastembed = "5.5.0"
rust_decimal = { version = "1.36", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "rust_decimal"] }
governor = "0.6"
async-openai = { version = "0.32.2", features = ["chat-completion"] }
