[package]
name = "polymind"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
tokio-util = "0.7.17"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
humantime-serde = "1"
config = "0.15.19"
chrono = { version = "0.4.42", features = ["serde"] }
rss = { version = "2.0.12", default-features = false }
scraper = "0.24.0"
chrono-tz = "0.10.4"
serde_json = "1.0.145"
ahash = "0.8.12"
lru = "0.16.2"
lazy_static = "1.5.0"
regex = "1.12.2"
deunicode = "1.6.2"
rust-stemmers = "1.2.0"
aho-corasick = "1.1.4"
tantivy = "0.22"
ethers = { version = "2.0.14", features = ["abigen", "ws", "eip712", "rustls"] }
hex = "0.4.3"
dotenv = "0.15.0"
fastembed = "5.5.0"
rust_decimal = { version = "1.36", features = ["serde", "macros"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "rust_decimal"] }
governor = "0.6"
async-openai = { version = "0.32.2", features = ["chat-completion"] }
axum = "0.7.5"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.1"
sysinfo = "0.30"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
polymarket-client-sdk = "0.2.1"
alloy = { version = "1.2.1", features = ["signers", "signer-local", "rpc-types-eth", "sol-types", "json"] }
secrecy = "0.8"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
